Install the stack templates only if DSL available
Data stream lifecycle has been made available only in 8.11 however we
now have a stack template that makes use of it (`.kibana-reporting`).

In an 8.10-8.14 mixed cluster environment we could cause a cluster state
corruption if we install the `kibana-reporting` (with `lifecycle:{}`)
template before all nodes _know_ of data stream lifecycle (8.10 does
not).

This changes the `StackTemplateRegistry` to wait for all nodes in the
cluster to be aware of data stream lifecycle before installing the
templates.